force-app/main/default/objects/RSS_Feed_Run_Config__c/RSS_Feed_Run_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RSS Feed Run Config</label>
</CustomObject>