force-app/main/default/objects/RSS_Feed_Run_Config__c/fields/Last_Processed_Feed_Category__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Feed_Category__c</fullName>
    <label>Last Processed Feed Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>