force-app/main/default/objects/RSS_Feed_Run_Config__c/fields/Mailgun_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Mailgun_API_Key__c</fullName>
    <label>Mailgun API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>