force-app/main/default/objects/RSS_Feed_Run_Config__c/fields/Mailgun_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Mailgun_Endpoint_URL__c</fullName>
    <label>Mailgun Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>